# XORG

./: .gitignore  README.md  electron-main.js  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
assets/: index-aqRb0NTs.js
build-scripts/: build-appimage.sh  build-deb.sh  build-linux.sh  build-tarball.sh  build-windows.sh  setup-mingw-sdl2.sh
public/: manifest.json
src/: Entity.ts  Game.ts  InputManager.ts  Physics.ts  Player.ts  Projectile.ts  Renderer.ts  SoundManager.ts  main.ts
src-cpp/: CMakeLists.txt  README.md  main.cpp
src-python/: README.md  main.py  setup_env.sh
steam/: CMakeLists.txt  README.md
steam/src/: main.cpp
